First post on fluentd!

--- a/_posts/2015-07-18-struggling-with-fluentd-part-1.html
+++ b/_posts/2015-07-18-struggling-with-fluentd-part-1.html
@@ -1,5 +1,5 @@
 ---
-title: struggling with fluentd
+title: Struggling with Fluentd (Part 1)
 date: 2015-07-18 6:00 PM
 category: coding
 from: stephanieliu.net
@@ -12,10 +12,10 @@ tags:
 - ruby
 ---
 <div class="container">
-<div class="page-header"><h2> fluentd from scratch </h2></div>
+<div class="page-header"><h2> Struggling with Fleuntd (Part 1) </h2></div>
 <div class="jumbotron">
   <p>
-  My mentor this summer is a 6 foot buff Greek man who goes by soto. To put it bluntly, he both terrifies me and I worship him. <br/> <br/>He's really smart, and he's got this air about him that screams a mixture of "yolo" and "work is life". It's basically "work hard, play hard," but for a 31-year-old greek man. <br/> <br/>His teaching style is very hands-off, and I have to admit I kind of like it that way. He wants me to figure shit out for myself, and so do I. He told me from the start that he hates when people ask him questions twice, so I don't. <br/><br/> For a while I followed him around and did simple tasks for him, but recently he told me to try to figure out fluentd, a centralized app logging service hosted by treasure data. Apparantly Logstasher, the service we currently use, crashes a lot, and so he wanted the switch. <br/> <br/>So there I was, an 18-year-old helpless intern plunged into a task I knew nothing about. (I didn't even know how rails logging worked). I learned later that he told the development team that this was an "impossible task". Well, I showed him ;) <br/><br/> So now, two weeks (and some sweat and tears) later, I'd like to share everything I learned about logging in rails and sinatra applications, how to convert their default ruby loggers into fluentd loggers, and how to forward logs to a remote fluentd logserver. Hang on tight folks, cause it's gonna be a lot. And maybe if some other poor intern gets thrown into the same task I was, they'll find this helpful. :) <br/><br/>
+  My mentor this summer is a 6 foot buff Greek man who goes by soto. To put it bluntly, he both terrifies me and I worship him. <br/> <br/>He's really smart, and he's got this air about him that screams a mixture of "yolo" and "work is life". It's basically "work hard, play hard," but for a 31-year-old greek man. <br/> <br/>His teaching style is very hands-off, and I have to admit I kind of like it that way. He wants me to figure shit out for myself, and so do I. He told me from the start that he hates when people ask him questions twice, so I don't. <br/><br/> For a while I followed him around and did simple tasks for him, but recently he told me to try to figure out <a href="http://www.fluentd.org/">fluentd</a>, a centralized app logging service hosted by treasure data. Apparantly Logstasher, the service we currently use, crashes a lot, and so he wanted the switch. <br/> <br/>So there I was, an 18-year-old helpless intern plunged into a task I knew nothing about. (I didn't even know how rails logging worked). I learned later that he told the development team that this was an "impossible task". Well, I showed him ;) <br/><br/> So now, two weeks (and some sweat and tears) later, I'd like to share everything I learned about logging in rails and sinatra applications, how to convert their default ruby loggers into fluentd loggers, and how to forward logs to a remote fluentd logserver. Hang on tight folks, cause it's gonna be a lot. And maybe if some other poor intern gets thrown into the same task I was, they'll find this helpful. :) <br/><br/>
   </p>
   <h3> Basic Rails Logging </h3>
   <p> To start, let's go back to basics. How does rails logging work? By default, rails will log to log/{environent}.log. So when you're in the development environment, visiting localhost:3000, logs will all go to the file log/development.log. <br/><br/> To create custom logs in a rails app, you can easily tell Rails to use a different logger, like this:
