Finish up part 2 of fluentd, update navbar

--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,11 @@ title: about
 <div class="container">
   <div class="page-header"> <h1>About</h1> </div>
 <div class="jumbotron">
+  <blockquote>
   <h4>
-  tl;dr I'm a college student finding her way in the world of hacking
-  </br>
-  </br>
+    <em>tl;dr </em> I'm a college student finding her way in the world of hacking
   </h4>
+  </blockquote>
   <p> My first experience of coding outside of class was a hackathon in new york
   city. I did what any confused, inexperienced girl in a sea of experienced male
   hackers would do - I pretended to know more than I did. Well that didn't work
