--- a/_posts/2015-07-18-struggling-with-fluentd-part-1.html
+++ b/_posts/2015-07-18-struggling-with-fluentd-part-1.html
@@ -1,5 +1,5 @@
 ---
-title: Struggling with Fluentd (Part 1)
+title: Struggling with fluentd (pt. 1)
 date: 2015-07-18 6:00 PM
 category: coding
 from: stephanieliu.net
