--- a/_posts/2015-07-18-struggling-with-fluentd-part-2.html
+++ b/_posts/2015-07-18-struggling-with-fluentd-part-2.html
@@ -1,5 +1,5 @@
 ---
-title: Struggling with Fluentd (Part 2)
+title: Struggling with fluentd (pt. 2)
 date: 2015-07-19 11:30 PM
 category: coding
 from: stephanieliu.net
