New post and tidying up about page

--- a/_posts/2015-07-20-overriding-css-styles.html
+++ b/_posts/2015-07-20-overriding-css-styles.html
@@ -33,3 +33,5 @@ color: #FFF;
 {% endhighlight %}
 </p><p> P.S. Inspect element on Google Chrome is the most amazing thing to happen to front-end. You can play around with styling without ever having to change your code, so you can just try out different things without constantly reloading the page. 
 </p>
+<p> <br/> Here's an example: (Are you not blown away???) (Also, is this meta?) <br/></p>
+<img src="{{ site.baseurl }}/assets/overriding-css-bootstrap.png" alt="Using Inspect Element in Google Chrome" style="max-width: 100%;">
