--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ title: stephanie liu
       <ul>
         {% for post in site.posts %}
           <li>
-            <h4>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-            </h4>
+            <a href="{{ post.url }}"><h4>{{ post.title }}<small> {{ post.date || date: '%B %d %Y' }}</small></h4></a>
           </li>
         {% endfor %}
       </ul>
