--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,6 @@ title: about
     <em>tl;dr </em> I'm a college student blogging about life, coding, and random midnight thoughts
   </h4>
   </blockquote>
-  <!--img src="{{ site.baseurl }}/assets/about-me.png" alt="This is me!" style="width:200px;height:200px;"-->
   <p> My first experience of coding outside of class was a hackathon in new york
   city. I did what any confused, inexperienced girl in a sea of experienced male
   hackers would do - I pretended to know more than I did, I feigned interest in design and front-end cause none of the guys wanted to do it, and I took a back seat as the rest of them discussed what project we'd embark on. Well, that didn't work
@@ -31,4 +30,5 @@ title: about
   I was born in Toronto, Canada (aka the 6). </p>
   <p>Hopefully I can help some others out there who find themselves in the same
   confused holes I was before I wrote each of these blog posts :) </p>
+  <img src="{{ site.baseurl }}/assets/about-me.png" alt="This is me!" style="width:200px;height:200px;margin:0 auto;border-radius:100px;display:block;">
 </div></div>
