--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,8 @@ title: about
 <div class="jumbotron">
   <blockquote>
   <h4>
-    <em>tl;dr </em> I'm a college student blogging about life, coding, and random midnight thoughts
+    <em>tl;dr </em> I'm a college student blogging about life, coding, and random midnight thoughts.
+    <br/><br/> Check out my personal website <a href="http://stephanieliu.me">here!</a>
   </h4>
   </blockquote>
   <img src="{{ site.baseurl }}/assets/tina.gif" alt="tina == me" style="width:60%;margin:0 auto;display:block;">
