--- a/_posts/2015-07-20-overriding-css-styles.html
+++ b/_posts/2015-07-20-overriding-css-styles.html
@@ -2,7 +2,7 @@
 title: Overriding CSS styles
 date: 2015-07-20 2:45 PM
 category: coding
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - css
 - bootstrap
@@ -31,7 +31,7 @@ color: #FFF;
 color: #FFF;
 }
 {% endhighlight %}
-</p><p> P.S. Inspect element on Google Chrome is the most amazing thing to happen to front-end. You can play around with styling without ever having to change your code, so you can just try out different things without constantly reloading the page. 
+</p><p> P.S. Inspect element on Google Chrome is the most amazing thing to happen to front-end. You can play around with styling without ever having to change your code, so you can just try out different things without constantly reloading the page.
 </p>
 <p> <br/> Here's an example: (Are you not blown away???) (Also, is this meta?) <br/></p>
 <img src="{{ site.baseurl }}/assets/overriding-css-bootstrap.png" alt="Using Inspect Element in Google Chrome" style="max-width: 100%;">
