--- a/_posts/2015-07-22-the-love-of-learning-or-the-love-of-creating.html
+++ b/_posts/2015-07-22-the-love-of-learning-or-the-love-of-creating.html
@@ -2,7 +2,7 @@
 title: The love of learning or the love of creating
 date: 2015-07-22 8:00 PM
 category: thoughts
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - coding
 ---
