--- a/_posts/2015-08-11-I-kinda-miss-java.html
+++ b/_posts/2015-08-11-I-kinda-miss-java.html
@@ -2,7 +2,7 @@
 title: I kinda miss java
 date: 2015-08-11 11:30 PM
 category: coding
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - random
 - java
