--- a/_posts/2015-08-11-sort-by-and-group-by-ruby-methods-for-arrays.html
+++ b/_posts/2015-08-11-sort-by-and-group-by-ruby-methods-for-arrays.html
@@ -2,7 +2,7 @@
 title: Sort by and group by ruby methods for arrays
 date: 2015-08-11 10:45 AM
 category: coding
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - ruby
 ---
