--- a/_posts/2015-08-18-rspec-expect-not-to-raise-error.html
+++ b/_posts/2015-08-18-rspec-expect-not-to-raise-error.html
@@ -2,7 +2,7 @@
 title: Error expectations (or the lack thereof) in rspec
 date: 2015-08-18 12:00 PM
 category: coding
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - rspec
 - ruby
