--- a/_posts/2015-07-21-creating-custom-env-variables-in-rails-+-using-ordered-options.html
+++ b/_posts/2015-07-21-creating-custom-env-variables-in-rails-+-using-ordered-options.html
@@ -2,7 +2,7 @@
 title: Creating custom environment variables in rails + using ordered options
 date: 2015-07-21 9:30 PM
 category: coding
-from: stephanieliu.net
+from: stephanieliu.me
 tags:
 - rails
 - ruby
